[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Coin.gd" type="Script" id=1]
[ext_resource path="res://Images/GameArt.png" type="Texture" id=2]
[ext_resource path="res://Sounds/Coin.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="Animation" id=2]
resource_name = "Rotate"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}

[node name="Coin" type="Area2D"]
monitorable = false
collision_layer = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 16
hframes = 16
frame = 28

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Rotate"
anims/Rotate = SubResource( 2 )

[node name="CoinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Coin_body_entered"]
[connection signal="finished" from="CoinSound" to="." method="_on_CoinSound_finished"]
